# youtube-clipping

./: .env.example  .gitignore  AGENTS.md  AI-NEWS-SOURCING.md  AUTOPILOT-GOAL-AND-LOOP.md  CAPTION-STYLE.md  CHANNEL-CONCEPTS.md  CHANNEL-PLAYBOOK.md  CLAUDE.md  CLIP-PIPELINE-HANDOFF.md  CONTENT-STRATEGY.md  DIAL-GOAL.md  DIAL-PROMPT.md  GOAL-AND-LOOP.md  HANDOFF.md  IMPROVEMENT-LOG.md  LAUNCH-CHECKLIST.md  LEARNINGS.md  LOOP-LOG.md  MONETIZATION.md  OPERATING-PLAN.md  OPERATOR-PLAYBOOK.md  QA-CHECKLIST.md  README.md  RESEARCH-GOAL-AND-LOOP.md  SCOREBOARD.md  SSEMBLE-PARITY.md  STATUS.md  TILLER-LOOP-PROMPT.md  WIN-GOAL-AND-LOOP.md  YOUTUBE-CLIPPING-WORKFLOW.md  agent.toml  events.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
config/: hook-playbook.md  niches.example.yaml  niches.yaml  settings.yaml
data/: demo-brief.md
research/: out_GYEdcX.json  out_VoAavJ.json  out_oJzr4.json  out_ygeCgN.json  source_videos.json
rust/: Cargo.toml  PROMPT.md  README.md
rust/scripts/: build-ui.sh  deploy-live.sh
rust/src/: actions.rs  analytics.rs  archive.rs  autopilot.rs  brief.rs  captions.rs  capture.rs  channels.rs  clip.rs  commentary.rs  config.rs  db.rs  diagnose.rs  distribute.rs  enhance.rs  experiment.rs  formats.rs  guardrails.rs  hooks.rs  listicle.rs  main.rs  optimize.rs  qc.rs  reframe.rs  scoreboard.rs  scoring.rs  server.rs  sourcing.rs  story.rs  transcribe.rs  util.rs  vision.rs  voice.rs
rust/ui/: Cargo.toml  Trunk.toml  index.html  styles.css
rust/ui/src/: copilot.rs  http.rs  main.rs  sheet.rs
rust/ui/src/pages/: analytics.rs  channels_page.rs  dashboard.rs  mod.rs  new_project.rs  pipeline.rs  project.rs  studio.rs  studio_format.rs
rust/web/: app.js  index.html  styles.css
scripts/: analyze_reel_with_gemini.py  backfill_provenance.py  clear_qc_channel.py  daily.sh  install-crons.sh  make_clips.py  refine-watch.sh  refine_builder.py  refine_loop.py  refine_tui.py  run-ralph-dial.sh  run-ralph.sh  setup-whisper.sh  setup.sh  weekly.sh  yt_oauth.py
src/ycp/: __init__.py  __main__.py  archive.py  autopilot.py  brief.py  captions.py  capture.py  cli.py  clip.py  config.py  db.py  distribute.py  enhance.py  goldmine.py  hooks.py  milestones.py  mock.py  notes.py  optimize.py  refine.py  reframe.py  scoring.py  slack_qc.py  sourcing.py  srt.py  transcribe.py  vision.py  youtube_ops.py
tests/: test_archive.py  test_autopilot.py  test_captions.py  test_capture.py  test_cli.py  test_clip.py  test_db.py  test_distribute.py  test_enhance.py  test_goldmine.py  test_milestones.py  test_notes.py  test_optimize.py  test_refine.py  test_reframe.py  test_scoring.py  test_sourcing.py  test_srt.py  test_transcribe.py  test_vision.py
