[package]
name = "ycp"
version = "0.1.0"
edition = "2021"
description = "YouTube clipping closed-loop ops — Rust port (in progress; Python in src/ycp stays live)"

[[bin]]
name = "ycp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
chrono-tz = "0.9"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"                                              # SRT timestamp parse + blank-line split (mirrors Python `re`)
rusqlite = { version = "0.31", features = ["bundled"] }  # bundled = static sqlite, no system dep
# blocking (mirrors Python `requests`) + rustls so the binary scp's to any machine with no system OpenSSL.
# multipart = Postiz mp4 upload (POST /upload, files=...).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
# caption render (Pillow → pure Rust): ab_glyph rasterizes TTF glyphs, image writes the RGBA PNG
# frame sequence ffmpeg `overlay` composites. Keeps the single-binary goal — no Python/Pillow on
# target machines. png-only keeps image lean.
ab_glyph = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
sha1 = "0.10"   # clip-id = sha1(url)[:8], byte-identical to Python hashlib.sha1

# --- web server (ycp serve) — wraps the pipeline in a browser editor for the team ---
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
rust-embed = "8"        # embed web/ assets into the binary → still single-file to ship
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"

[profile.release]
lto = true        # lean, fast single binary to ship to teammates
strip = true
