[package]
name = "tiller-ui"
version = "0.1.0"
edition = "2021"

# Standalone workspace: keeps this WASM crate OUT of the root `ycp` cargo gate
# (mirrors the campaign hub crates/ui pattern). Build solely via `trunk build`
# from this directory; `cargo test`/`clippy` in rust/ are unaffected by the
# wasm32 target requirement.
[workspace]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
gloo-net = { version = "0.6", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
# Feature set covers every page's needs (upload forms, video player, clipboard,
# publish modal) so page agents never have to touch this shared file.
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlVideoElement",
    "KeyboardEvent",
    "MouseEvent",
    "Navigator",
    "Clipboard",
    "File",
    "FileList",
    "FormData",
    "Blob",
    "Url",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
